[tool.poetry]
name = "powergridworld"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"
packages = [
    { include = "gridworld" }
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
gymnasium = "^0.28.1"
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
nbmake = "^1.4.1"
notebook = "^6.5.4"
opendssdirect-py = "^0.8.2"
pandas = "^2.0.1"
pytest = "^7.3.1"
scipy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
